name:                Cinemaffinity
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/funktionzero/cinemaffinity#readme
license:             GPLv3
license-file:        LICENSE
author:              Paolo Belluti
maintainer:          https://github.com/funktionzero/
copyright:           2017-2018 Paolo Belluti
category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stst
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
